# ddns-rs

./: .clippy.toml  .gitignore  CHANGELOG.md  Cargo.toml  rustfmt.toml
.github/workflows/: build-linux.yml  build-macos.yml
src/: factory.rs  main.rs
src/interfaces/: lxd.rs  mod.rs  peer.rs  stock.rs
src/notifiers/: email.rs  mod.rs  webhook.rs
src/providers/: cloudflare.rs  fake.rs  godaddy.rs  mod.rs
