[package]
name = "ddns-rs"
version = "0.1.4"
edition = "2021"
authors = ["Honsun Zhu <honsun@linux.com>"]
readme = "README.md"
keywords = ["ddns", "network", "cloudflare", "godaddy"]
categories = ["network-programming"]
license = "MIT"
repository = "https://github.com/ddns-rs/ddns-rs"
description = """
An easy to used program that help you update your dns record.
"""

[dependencies]
addr = "0.15"
rand = "0.8"
serde = "1"
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
pnet = "0.35"
anyhow = "1"
log = "0.4"
log4rs = "1"
chrono = "0.4"
cron = "0.12"
regex = "1"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
path-value = "0.1"
lazy_static = "1.4.0"
lettre = { version = "0.11", features = ["tokio1-native-tls"] }
maud = "0.26"
reqwest = { version = "0.12", features = ["json"] }
clap = { version = "4.2", features = ["derive"] }

[target.'cfg(unix)'.dependencies]
sd-notify = "0.4"
daemonize = "0.5"

[profile.release]
codegen-units = 16
lto = "thin"
